# evo-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
agent_data/: agent.md  deferred_tasks.json  memory.md  preferences.yaml  rules.md
agent_data/skills/: _template.md  _template.py  self_modification.md
data/test_conv/: test_user.jsonl
extensions/: README.md
src/evo_agent/: __init__.py  __main__.py
src/evo_agent/core/: action_journal.py  agent.py  autonomy.py  config.py  context.py  log_interceptor.py  monitor.py  restart.py  types.py
src/evo_agent/interfaces/: base.py  cli.py  registry.py  telegram.py  telegram_formatter.py
src/evo_agent/knowledge/: loader.py  manager.py  skill_loader.py
src/evo_agent/llm/: base.py  openai_compat.py  react_fallback.py  registry.py
src/evo_agent/memory/: conversation.py  people_db.py  summarizer.py
src/evo_agent/scheduler/: __init__.py  engine.py  loop.py  store.py
src/evo_agent/tools/: base.py  registry.py
src/evo_agent/tools/builtin/: cancel_task.py  check_status.py  file_ops.py  list_tasks.py  people.py  read_logs.py  schedule_task.py  self_modify.py  shell.py  telegram_send.py  web_browser.py  web_fetch.py  web_search.py
